--- a/style.css
+++ b/style.css
@@ -2,12 +2,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Play";
+  font-family: "Play", sans-serif;
 }
 
 body {
   height: 100vh;
   background: linear-gradient(135deg, #00416a, #80d0c7);
+}
+
+h1 {
+  font-size: 2rem;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
 }
 
 .todo-container {
